<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndCart2</string>
    <string name="action_settings">Settings</string>
    <string name="edit_item">Edit Item</string>
    <string name="new_item">New Item</string>
    <string name="delete">Delete</string>
    <string name="view_item_details">View Item Details</string>
    <string name="edit">Edit</string>
    <string name="item_name">Item name</string>
    <string name="add_or_edit_an_item">Add or edit an item</string>
    <string name="error_msg">This field can not be empty</string>
    <string name="delete_all">Delete All</string>
    <string name="add_new_item">Tap here to add a new item</string>
    <string name="enter_description_here">Enter description here</string>

    <string-array name="category_array">
        <item>Canned Goods</item>
        <item>Dairy</item>
        <item>Produce</item>
        <item>Meat</item>
        <item>Bread</item>
    </string-array>

</resources>