<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAddEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_or_edit_an_item"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/etItemName"
        android:hint="@string/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_margin="10dp"
        android:hint="Price"
        />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <CheckBox
        android:id="@+id/cbBought"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Bought"
        />

    <EditText
        android:id="@+id/etDescription"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:hint="@string/enter_description_here"
        />






</LinearLayout>